--- a/package.json
+++ b/package.json
@@ -47,14 +47,16 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "@dhiwise/component-tagger": "^1.0.10",
+    "@tailwindcss/typography": "^0.5.16",
+    "lottie-react": "^2.4.1",
     "next": "14.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "@dhiwise/component-tagger": "^1.0.10",
-    "@tailwindcss/typography": "^0.5.16",
     "recharts": "^2.15.2"
   },
   "devDependencies": {
+    "@netlify/plugin-nextjs": "^5.11.1",
     "@types/node": "^20",
     "@types/react": "18.2.45",
     "@types/react-dom": "18.2.0",
@@ -62,7 +64,6 @@
     "postcss": "8.4.8",
     "prettier": "^3.5.3",
     "tailwindcss": "3.4.6",
-    "@netlify/plugin-nextjs": "^5.11.1",
     "typescript": "^5"
   }
 }
