--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "next": "14.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^5.5.0",
     "recharts": "^2.15.2"
   },
   "devDependencies": {
